# tvis

./: .gitignore  .vimspector.json  CMakeLists.txt  README.md  \  debug.sh  run.sh  test.txt
src/: bar_spectrum_data_tranformer.cpp  bar_spectrum_data_tranformer.h  constants.h  main.cpp  settings.h  spectrum_data_transformer.h
src/common/: point.h
src/pulseaudio/: PaSource.cpp  PaSource.h
src/source/: alsa_source.h  pa_source.cpp  pa_source.h  source.h
src/tui/: bars_component.cpp  bars_component.h  component.h  component_characters_buffer.cpp  component_characters_buffer.h  screen.cpp  screen.h  terminal_writer.cpp  terminal_writer.h
